--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       
       <p class="letter-closing">İyi ki varsın.<br>İyi ki hayatımın içindesin.<br>İyi ki “biz” olduk.</p>
       
-      <p class="signature">Sevgilim, [Adın] ❤️</p>
+      <p class="signature">Sevgilim,❤️</p>
     </div>
     <button onclick="backToMain()">Geri qayıt</button>
   </div>
